--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # some of the requirements that will be listed for the model
 streamlit==1.28.0
-tensorflow==2.13.0
+tensorflow==2.20.0rc0
 opencv-python-headless==4.8.0.76
 pillow==10.0.0
 numpy==1.24.3
