--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 # some of the requirements that will be listed for the model
+
+# CHANGE: versions that are currently working with streamlit
 streamlit==1.28.0
-tensorflow==2.20.0rc0
+tensorflow==2.12.0
 opencv-python-headless==4.8.0.76
 pillow==10.0.0
-numpy==1.24.3
+numpy>=1.22,<1.24
 pandas==2.0.3
 matplotlib==3.7.2
 seaborn==0.12.2
