--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # some of the requirements that will be listed for the model
-streamlit==1.28.0
-tensorflow==2.13.0
-opencv-python-headless==4.8.0.76
-pillow==10.0.0
+streamlit==1.28.1
+tensorflow==2.15.0  # made this more compatible
+opencv-python-headless==4.8.1.78
+Pillow==10.0.1
 numpy==1.24.3
 pandas==2.0.3
 matplotlib==3.7.2
 seaborn==0.12.2
-plotly==5.15.0
+plotly==5.17.0
 scikit-learn==1.3.0
