--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Requirements for Melanoma Detection AI
 streamlit==1.28.1
-tensorflow>=2.20.0  # Updated for Python 3.13 compatibility
+tensorflow-cpu==2.15.0  # Use CPU version for better compatibility
 opencv-python-headless==4.8.1.78
 Pillow==10.0.1
-numpy>=1.24.3
-pandas>=2.0.3
-matplotlib>=3.7.2
-seaborn>=0.12.2
-plotly>=5.17.0
-scikit-learn>=1.3.0
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.17.0
+scikit-learn==1.3.0
