--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Requirements for Melanoma Detection AI
 streamlit==1.28.1
 keras==2.15.0  # Use standalone Keras instead of TensorFlow
-opencv-python-headless==4.8.1.78
-Pillow==10.0.1
-numpy==1.24.3
-pandas==2.0.3
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.17.0
-scikit-learn==1.3.0
+opencv-python-headless>=4.8.0
+Pillow>=10.1.0  # Updated for Python 3.13 compatibility
+numpy>=1.26.0  # Updated for Python 3.13 compatibility
+pandas>=2.1.0  # Updated for Python 3.13 compatibility
+matplotlib>=3.8.0  # Updated for Python 3.13 compatibility
+seaborn>=0.13.0  # Updated for Python 3.13 compatibility
+plotly>=5.17.0
+scikit-learn>=1.4.0  # Updated for Python 3.13 compatibility
